# upvpn-app

./: .gitignore  Build.md  CONTRIBUTING.md  Cargo.toml  Makefile.toml  NetworkDependency.md  README.md  SECURITY.md  about.toml  upvpn.conf.toml
metadata/en-US/: full_description.txt  short_description.txt  title.txt
upvpn-android/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
upvpn-android/app/: .gitignore  build.gradle.kts
upvpn-android/app/src/main/: AndroidManifest.xml
upvpn-android/app/tunnel/libwg-go/: Makefile  jni.c  sha256sum
upvpn-android/gradle/wrapper/: gradle-wrapper.properties
upvpn-apple/: README.md
upvpn-apple/UpVPN/: .gitignore
upvpn-apple/UpVPN/App/: ContentView.swift  ReviewManager.swift  UpVPNApp.swift
upvpn-apple/UpVPN/App/Auth/: GoogleSignInManager.swift
upvpn-apple/UpVPN/App/Views/: AccountView.swift  AuthView.swift  CardContainer.swift  Color+Extension.swift  ElapsedTimeView.swift  EmailCodeView.swift  FlagImage.swift  HelpView.swift  HomeCard.swift  HomeCardDivider.swift  HomeCardLocation.swift  HomeView.swift  KeyValueView.swift  Location+Extension.swift  LocationView.swift  LocationsMapView.swift  LocationsView.swift  LoginView.swift  MainView.swift  PasswordField.swift  RecentLocationsCard.swift  ReviewRequestView.swift  RuntimeConfigurationView.swift  SettingsView.swift  (+7 more)
upvpn-apple/UpVPN/Common/: AppConfig.swift  FileManager+Extension.swift  JWTUtils.swift  Keychain.swift  Utils.swift  VPNState.swift
upvpn-apple/UpVPN/Config/: Config.xcconfig  Version.xcconfig
upvpn-apple/UpVPN/Data/: DataRepository.swift  PlanRepository.swift
upvpn-apple/UpVPN/IPC/: AppMessageHandler.swift  NETunnelProviderSessionExtension.swift  Request.swift  Response.swift
upvpn-apple/UpVPN/Model/: AuthViewModel.swift  Country.swift  Device.swift  InterfaceConfiguration+Device.swift  Location.swift  LocationViewModel.swift  PlanViewModel.swift  TunnelViewModel.swift  Types.swift  UserCredentials.swift
upvpn-apple/UpVPN/Network/: Client.swift  VPNApiService.swift
upvpn-apple/UpVPN/Store/: DeviceStore.swift  LocationStore.swift  StoreError.swift  StoreKeys.swift  UserStore.swift
upvpn-apple/UpVPN/Tunnel/: TunnelConfiguration+UapiConfig.swift  TunnelManager.swift  TunnelManagerSimulator.swift  TunnelObserver.swift  TunnelStatus.swift
upvpn-apple/UpVPN/UpVPN.xcodeproj/: project.pbxproj
upvpn-apple/UpVPN/UpVPNNetworkExtension/: Info.plist  PacketTunnelProvider.swift  UpVPNNetworkExtension_macOS.entitlements
upvpn-apple/UpVPN/iOS/: Info.plist  LaunchScreen.storyboard  UpVPN.entitlements
upvpn-apple/UpVPN/macOS/: Info.plist  UpVPN.entitlements
upvpn-apple/UpVPN/tvOS/: Info.plist  LaunchScreen.storyboard  UpVPN.entitlements
upvpn-assets/: AppIcon.icns  create_iconset.sh  create_menubar.sh  icon.xcf  logo.xcf  menubar.xcf
upvpn-assets/icons/: icon.icns
upvpn-assets/tvos/: create_iconset.sh  create_topshelf.sh  iconTVOS.xcf
upvpn-cli/: Cargo.toml
upvpn-cli/src/: cli.rs
upvpn-cli/src/commands/: connect.rs  disconnect.rs  error.rs  locations.rs  sign_in.rs  sign_out.rs  status.rs
upvpn-config/: Cargo.toml  build.rs
upvpn-config/src/: lib.rs
upvpn-controller/: Cargo.toml  build.rs
upvpn-controller/proto/: upvpn-controller.proto
upvpn-controller/src/: auth.rs  lib.rs
upvpn-controller/src/conversions/: account.rs  location.rs  notification.rs  vpn_status.rs
upvpn-daemon/: Cargo.toml  upvpn.conf.toml
upvpn-daemon/src/: cleanup.rs  controller.rs  daemon.rs  db.rs  lib.rs  location_storage.rs  logging.rs  macos.rs  main.rs  runtime.rs  shutdown.rs  state.rs  system_service.rs  token_storage.rs  tunnel.rs  unique.rs
upvpn-daemon/src/device/: handler.rs  init.rs  mod.rs  storage.rs
upvpn-daemon/src/vpn_session/: handler.rs  reclaimer.rs  storage.rs  watcher.rs
upvpn-entity/: Cargo.toml
upvpn-entity/src/conversions/: device.rs  location.rs
upvpn-migration/: Cargo.toml
upvpn-migration/src/: main.rs
upvpn-packages/: Cargo.toml  Dockerfile  Makefile.toml  tag.txt  upvpn-oss-licenses-footer.hbs  upvpn-oss-licenses-header.hbs  upvpn-oss-licenses-rust.hbs
upvpn-packages/linux/: upvpn.desktop
upvpn-packages/linux/debian/maintainer-scripts/: postrm  preinst  prerm
upvpn-packages/linux/unit-scripts/: upvpn-daemon.service
upvpn-packages/macos/: app.entitlements  build.sh
upvpn-packages/macos/pkg/: Distribution
upvpn-packages/macos/pkg/Resources/: welcome.html
upvpn-packages/macos/pkg/root/Applications/upvpn.app/Contents/: Info.plist
upvpn-packages/macos/pkg/root/Applications/upvpn.app/Contents/Resources/: uninstall.sh
upvpn-packages/macos/pkg/scripts/: postinstall  preinstall
upvpn-packages/windows/: sign.sh  upvpn.wsx
upvpn-server/: Cargo.toml  build.rs
upvpn-server/proto/: upvpn-server.proto
upvpn-server/src/: lib.rs  rest.rs
upvpn-server/src/conversions/: device.rs  location.rs  vpn_session.rs
upvpn-types/: Cargo.toml
upvpn-types/src/: device.rs  lib.rs  location.rs  rest.rs  wireguard.rs
upvpn-ui/: .env  .env.production  README.md  index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
upvpn-ui/src/: App.tsx
upvpn-ui/src-tauri/: Cargo.toml  tauri.conf.json  upvpn.conf.toml
upvpn-ui/src-tauri/capabilities/: migrated.json
upvpn-ui/src-tauri/src/: error.rs  event_forwarder.rs  gnome.rs  google_auth.rs  main.rs  state.rs  system_tray.rs
upvpn-ui/src-tauri/src/commands/: auth.rs  daemon_online.rs  desktop_notification.rs  file_ops.rs  location.rs  mod.rs  notification.rs  open_license.rs  version.rs  vpn_session.rs
upvpn-ui/src/assets/: license.html
upvpn-ui/src/components/: City.tsx  Country.tsx  Hero.tsx  Layout.tsx  LocationList.tsx  LocationSelector.tsx  LocationWarmColdIcon.tsx  LogoIcon.tsx  Navbar.tsx  NotificationDiv.tsx  NotificationList.tsx  RecentLocations.tsx  Timer.tsx
upvpn-ui/src/context/: LocationContext.tsx  NotificationContext.tsx  VpnStatusContext.tsx
upvpn-ui/src/hooks/: useAuthStatus.ts
upvpn-ui/src/lib/: types.ts  util.ts
upvpn-ui/src/pages/: Help.tsx  Home.tsx  Locations.tsx  Settings.tsx  SignIn.tsx
(+392 files in other folders)
