[workspace]
resolver = "2"
members = [
    "upvpn-cli",
    "upvpn-config",
    "upvpn-controller",
    "upvpn-daemon",
    "upvpn-entity",
    "upvpn-migration",
    "upvpn-packages",
    "upvpn-server",
    "upvpn-types",
    "upvpn-ui/src-tauri",
]

[profile.release]
#opt-level = 'z'     # Optimize for size.
opt-level = 3
lto = true          # Enable Link Time Optimization
#codegen-units = 1   # Reduce number of codegen units to increase optimizations.
#panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
