[package]
name = "upvpn-cli"
version = "0.1.0"
edition = "2021"
publish = false
license = "GPL-3.0"
authors = ["upvpn LLC"]
description = "Cli to manage VPN session via upvpn daemon"
homepage = "https://upvpn.app"
repository = "https://github.com/upvpn/upvpn-app"

[[bin]]
name = "upvpn"
path = "src/main.rs"

[dependencies]
async-trait = "0.1.68"
clap = { version = "4.2.3", features = ["derive"] }
tokio = { version = "1.27.0", features = ["rt-multi-thread", "macros", "signal"] }
validator = { version = "0.16.0", features = ["derive"] }
upvpn-controller = {path = "../upvpn-controller"}
upvpn-types = {path = "../upvpn-types"}
thiserror = "1.0.40"
tonic = "0.9.2"
dialoguer = { version = "0.10.4", features = ["fuzzy-select"] }
indicatif = "0.17.3"
tokio-stream = { version = "0.1.12", features = ["sync"] }
console = "0.15.5"
