[package]
name = "upvpn-cli"
version = "0.1.0"
edition = "2021"
publish = false
license = "GPL-3.0"
authors = ["upvpn LLC"]
description = "Cli to manage VPN session via upvpn daemon"
homepage = "https://upvpn.app"
repository = "https://github.com/upvpn/upvpn-app"

[[bin]]
name = "upvpn"
path = "src/main.rs"

[dependencies]
async-trait = "0.1.74"
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.34", features = ["rt-multi-thread", "macros", "signal"] }
validator = { version = "0.16.0", features = ["derive"] }
upvpn-controller = {path = "../upvpn-controller"}
upvpn-types = {path = "../upvpn-types"}
thiserror = "1.0"
tonic = "0.9.2"
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
indicatif = "0.17.7"
tokio-stream = { version = "0.1.14", features = ["sync"] }
console = "0.15.7"
