[package]
name = "upvpn-config"
version = "0.1.0"
edition = "2021"
publish = false
license = "GPL-3.0"
authors = ["upvpn LLC"]
homepage = "https://upvpn.app"
repository = "https://github.com/upvpn/upvpn-app"

[dependencies]
figment = { version = "0.10.8", features = ["env", "toml"] }
once_cell = "1.17.1"
serde = { version = "1.0.160", features = ["derive"] }
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["fs"] }

[build-dependencies]
toml = "0.7.3"
serde = "1.0.160"
