[package]
name = "upvpn-entity"
version = "0.1.0"
edition = "2021"
publish = false
license = "GPL-3.0"
authors = ["upvpn LLC"]
homepage = "https://upvpn.app"
repository = "https://github.com/upvpn/upvpn-app"

[lib]
name = "upvpn_entity"
path = "src/lib.rs"

[dependencies.sea-orm]
version = "0.11.2"
features = [
  # Enable at least one `ASYNC_RUNTIME` and `DATABASE_DRIVER` feature if you want to run migration via CLI.
  # View the list of supported features at https://www.sea-ql.org/SeaORM/docs/install-and-config/database-and-async-runtime.
  # e.g.
  "runtime-tokio-rustls",  # `ASYNC_RUNTIME` feature
  # "sqlx-postgres",         # `DATABASE_DRIVER` feature
  "sqlx-sqlite",
]

[dependencies]
upvpn-types = {path = "../upvpn-types"}
uuid = { version = "1.3.1", features = ["v4", "serde"] }
serde_json = "1.0"
