[package]
name = "upvpn-ui"
version = "0.1.0"
description = "upvpn app"
edition = "2021"
rust-version = "1.57"
publish = false
license = "GPL-3.0"
authors = ["upvpn LLC"]
homepage = "https://upvpn.app"
repository = "https://github.com/upvpn/upvpn-app"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = ["tray-icon"] }
upvpn-controller = {path = "../../upvpn-controller"}
upvpn-server = {path = "../../upvpn-server"}
upvpn-types = {path = "../../upvpn-types"}
upvpn-config = {path = "../../upvpn-config"}
tokio-stream = "0.1.14"
tauri-plugin-log = { version = "2" }
tauri-plugin-single-instance = { version = "2" }
log = "^0.4"
tokio = { version = "1.34", features = ["time", "net", "io-util", "macros"] }
tokio-util = { version = "0.7", features = ["rt"] }
futures = "0.3.29"
thiserror = "1.0"
tonic = "0.9.2"
reqwest = { version = "0.11", features = ["json"] }
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
url = "2"
semver = "1.0.20"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-os = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = { version = "0.18" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
